# asun

./: .gitignore  .gitmodules  README.md  README_CN.md
ason-c/: README.md  README_CN.md
ason-cpp/: README.md  README_CN.md
ason-csharp/: README.md  README_CN.md
ason-go/: README.md  README_CN.md
ason-rs/: Cargo.toml  README.md  README_CN.md
ason-swift/: .gitignore
ason-zig/: README.md  README_CN.md
c/: CMakeLists.txt  README.md  README_CN.md
c/examples/: basic.c  bench.c  complex.c  cross_compat.c
c/include/: ason.h
c/src/: ason.c
c/tests/: ason_test.c  cross_compat_test.c
cpp/: CMakeLists.txt
cpp/examples/: basic.cpp  bench.cpp  complex.cpp  cross_compat.cpp
cpp/include/: ason.hpp
cpp/tests/: cross_compat_test.cpp
docs/: ASON_SPEC.md  ASON_SPEC_CN.md  PUBLISH_GUIDE_CN.md  cross_language_compat_matrix.md  prompt.md
example/: 10MB_Ecommerce Customer Churn Dataset { 1 } Level Minified Versions
go/: README.md  README_CN.md  ason_test.go  bin_test.go  cross_compat_test.go  error.go  go.mod  marshal.go  marshal_bin.go  unmarshal.go  unmarshal_bin.go
java/: README.md  README_CN.md  build.gradle
lsp/: README.md  README_CN.md
plugin_vscode/: .gitignore
plugin_vscode/scripts/: build.sh
python/: README.md  README_CN.md  ason.py  test_ason.py
python/examples/: basic.py  bench.py  complex.py
rust/: Cargo.toml  README.md  README_CN.md
rust/examples/: basic.rs  complex.rs
rust/src/: ast.rs  (+10 more)
samples/: 01_simple_object.ason
scripts/: batch-tag-languages.sh  pull-submodules.sh  push-submodules.sh  submodule.sh
zig/: build.zig
(+35 files in other folders)
